--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<p><span id="blancomulero2023qdp">Blanco-Mulero, D., Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span>
-<span id="rajani2023coimitation">Rajani, C., Arndt, K., Blanco-Mulero, D., Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span>
-<span id="hietala2022visualfeedback">Hietala, J., Blanco-Mulero, D., Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span>
-<span id="tuomainen2021manipulation">Tuomainen<em>, N., Blanco-Mulero</em>, D., &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span>
-<span id="blancomulero2021evolvinggraph">Blanco-Mulero, D., Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></p>
+<p><span id="blancomulero2023qdp">Blanco-Mulero, D., Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></p>
+
+<p><span id="rajani2023coimitation">Rajani, C., Arndt, K., Blanco-Mulero, D., Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></p>
+
+<p><span id="hietala2022visualfeedback">Hietala, J., Blanco-Mulero, D., Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></p>
+
+<p><span id="tuomainen2021manipulation">Tuomainen<em>, N., Blanco-Mulero</em>, D., &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></p>
+
+<p><span id="blancomulero2021evolvinggraph">Blanco-Mulero, D., Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></p>
 
 <h2 id="news">News</h2>
 <p><strong>02.05.2023</strong> I will be attending the <a href="https://deformable-workshop.github.io/icra2023/">Workshop on Representing and Manipulating Deformable Objects</a> at ICRA 2023, really eager to meet the community working on deformable objects!</p>
