--- a/index.html
+++ b/index.html
@@ -349,9 +349,11 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
-<p><strong>02.05.2023</strong> I will be attending the <a href="https://deformable-workshop.github.io/icra2023/">Workshop on Representing and Manipulating Deformable Objects</a> at ICRA 2023, really eager to meet the community working on deformable objects!</p>
+<p><strong>06.06.2023</strong> You can find here the <a href="https://dblanm.github.io/assets/images/ICRA_WS_Poster_2023.pdf">poster</a>, <a href="https://deformable-workshop.github.io/icra2023/spotlight/06-BLANCOMULERO-spotlight.pdf">extended abstract</a>, and <a href="https://youtu.be/y4tpT1i9OL8">video</a> of my work, <a href="https://sites.google.com/view/qdp-srl">QDP</a>, presented at the <a href="https://deformable-workshop.github.io/icra2023/">Workshop on Representing and Manipulating Deformable Objects</a> ICRA’23.</p>
 
-<p><strong>24.03.2023</strong> We just published a new pre-print <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
+<p><strong>30.05.2023</strong> I participated in the <a href="http://www.iri.upc.edu/groups/perception/ClothManipulationChallenge/">Cloth Manipulation and Perception track</a> of the ICRA’23 <a href="https://www.iri.upc.edu/groups/perception/RGMCompetition/">Robotic Grasping and Manipulation Competition</a>.</p>
+
+<p><strong>24.03.2023</strong> I just published a new pre-print <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
 Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information.</p>
 
 <p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023!</p>
@@ -375,7 +377,7 @@ Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a 
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 02 May 2023
+                    Last updated on 07 June 2023
             </small>
           </p>
 
