--- a/index.html
+++ b/index.html
@@ -132,15 +132,50 @@ function toggleBibtexrajani2023coimitation(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
+<li><div class="text-justify"><span id="blanco2023benchmarking"><b>Blanco-Mulero, D.</b>, Barbany, O., Alcan, G., Colomé, A., Torras, C., &amp; Kyrki, V. (2023). Benchmarking the Sim-to-Real Gap in Cloth Manipulation. <i> ArXiv Preprint ArXiv:2310.09543</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblanco2023benchmarking()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
+ 
+
+
+
+    <a href=""><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ablanco2023benchmarking" style="display: none;">
+<pre>@article{blanco2023benchmarking,
+  title = {Benchmarking the Sim-to-Real Gap in Cloth Manipulation},
+  author = {Blanco-Mulero, David and Barbany, Oriol and Alcan, Gokhan and Colom{\'e}, Adri{\`a} and Torras, Carme and Kyrki, Ville},
+  journal = { arXiv preprint arXiv:2310.09543},
+  year = {2023},
+  group = {preprint},
+  website = {}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblanco2023benchmarking(parameter) {
+    var x= document.getElementById('ablanco2023benchmarking');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="blancomulero2023qdp_iros">\textbfDavid \textbfBlanco-Mulero, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp_iros()">Bibtex</button>
+ 
+
+ 
+
+ 
 
  
 
@@ -149,24 +184,57 @@ function toggleBibtexrajani2023coimitation(parameter) {
     <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
 
 
-<div id="ablancomulero2023qdp" style="display: none;">
-<pre>@inproceedings{blancomulero2023qdp,
+<div id="ablancomulero2023qdp_iros" style="display: none;">
+<pre>@inproceedings{blancomulero2023qdp_iros,
   title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  author = {\textbf{David} \textbf{Blanco-Mulero} and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  booktitle = {2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   year = {2023},
-  journal = {arXiv preprint arXiv:2303.13320},
-  eprint = {2303.13320},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2303.13320},
-  group = {preprint},
+  group = {conference},
   website = {https://sites.google.com/view/qdp-srl}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexblancomulero2023qdp(parameter) {
-    var x= document.getElementById('ablancomulero2023qdp');
+function toggleBibtexblancomulero2023qdp_iros(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp_iros');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="blancomulero2023qdp_workshop">\textbfDavid \textbfBlanco-Mulero, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp_workshop()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ablancomulero2023qdp_workshop" style="display: none;">
+<pre>@inproceedings{blancomulero2023qdp_workshop,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {\textbf{David} \textbf{Blanco-Mulero} and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  booktitle = {3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA},
+  year = {2023},
+  group = {workshop},
+  website = {https://sites.google.com/view/qdp-srl}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblancomulero2023qdp_workshop(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp_workshop');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -355,8 +423,12 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
-<p><strong>27.06.2023</strong> Our paper “<a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
-Manipulation Primitives for Robotic Cloth Manipulation</a>” was accepted to IROS 2023. You can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information. See you in Detroit!</p>
+<p><strong>20.10.2023</strong> - I was granted the <a href="https://www.aalto.fi/en/foundation-for-aalto-university-science-and-technology/grants-from-the-foundations-own-funds">Nokia Foundation</a> Scholarship grant, to encourage the research of my PhD thesis.</p>
+
+<p><strong>15.10.2023</strong> - We have published a pre-print <a href="https://arxiv.org/abs/2310.09543">Benchmarking the Sim-to-Real Gap in Cloth Manipulation</a>. This work presents a benchmark dataset for dynamic cloth manipulation, and evaluates the reality gap in MuJoCo, Bullet, Flex and SOFA using the proposed benchmark. Check the <a href="https://sites.google.com/view/cloth-sim2real-benchmark">project website</a> for more information.</p>
+
+<p><strong>02.10.2023</strong> I presented our paper “<a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
+Manipulation Primitives for Robotic Cloth Manipulation</a>” at IROS 2023 in Detroit. You can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information.</p>
 
 <p><strong>06.06.2023</strong> You can find here the <a href="https://dblanm.github.io/assets/images/ICRA_WS_Poster_2023.pdf">poster</a>, <a href="https://deformable-workshop.github.io/icra2023/spotlight/06-BLANCOMULERO-spotlight.pdf">extended abstract</a>, and <a href="https://youtu.be/y4tpT1i9OL8">video</a> of my work, <a href="https://sites.google.com/view/qdp-srl">QDP</a>, presented at the <a href="https://deformable-workshop.github.io/icra2023/">Workshop on Representing and Manipulating Deformable Objects</a> ICRA’23.</p>
 
@@ -383,7 +455,7 @@ Manipulation Primitives for Robotic Cloth Manipulation</a>” was accepted to IR
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 30 June 2023
+                    Last updated on 20 October 2023
             </small>
           </p>
 
