--- a/publications/index.html
+++ b/publications/index.html
@@ -160,6 +160,43 @@ function toggleBibtexrajani2023coimitation(parameter) {
 }
 </script>
 </li>
+<li><div class="text-justify"><span id="blancomulero2023qdp_iros">\textbfDavid \textbfBlanco-Mulero, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp_iros()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ablancomulero2023qdp_iros" style="display: none;">
+<pre>@inproceedings{blancomulero2023qdp_iros,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {\textbf{David} \textbf{Blanco-Mulero} and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  booktitle = {2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year = {2023},
+  group = {conference},
+  website = {https://sites.google.com/view/qdp-srl}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblancomulero2023qdp_iros(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp_iros');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
 <li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
 <button class="button0" onclick="toggleBibtexhietala2022visualfeedback()">Bibtex</button>
  
@@ -301,7 +338,44 @@ function toggleBibtex2016_puma(parameter) {
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>.</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp_workshop">\textbfDavid \textbfBlanco-Mulero, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp_workshop()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ablancomulero2023qdp_workshop" style="display: none;">
+<pre>@inproceedings{blancomulero2023qdp_workshop,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {\textbf{David} \textbf{Blanco-Mulero} and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  booktitle = {3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA},
+  year = {2023},
+  group = {workshop},
+  website = {https://sites.google.com/view/qdp-srl}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblancomulero2023qdp_workshop(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp_workshop');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>.</span></div>
 <button class="button0" onclick="toggleBibtexrajani2022coimitation_workshop()">Bibtex</button>
  
 
@@ -383,41 +457,35 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="preprints">Preprints</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
+<ol class="bibliography"><li><div class="text-justify"><span id="blanco2023benchmarking"><b>Blanco-Mulero, D.</b>, Barbany, O., Alcan, G., Colomé, A., Torras, C., &amp; Kyrki, V. (2023). Benchmarking the Sim-to-Real Gap in Cloth Manipulation. <i> ArXiv Preprint ArXiv:2310.09543</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblanco2023benchmarking()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
-
  
 
 
 
-    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
+    <a href=""><input class="button3" type="button" value="website" /></a>
 
 
-<div id="ablancomulero2023qdp" style="display: none;">
-<pre>@inproceedings{blancomulero2023qdp,
-  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+<div id="ablanco2023benchmarking" style="display: none;">
+<pre>@article{blanco2023benchmarking,
+  title = {Benchmarking the Sim-to-Real Gap in Cloth Manipulation},
+  author = {Blanco-Mulero, David and Barbany, Oriol and Alcan, Gokhan and Colom{\'e}, Adri{\`a} and Torras, Carme and Kyrki, Ville},
+  journal = { arXiv preprint arXiv:2310.09543},
   year = {2023},
-  journal = {arXiv preprint arXiv:2303.13320},
-  eprint = {2303.13320},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2303.13320},
   group = {preprint},
-  website = {https://sites.google.com/view/qdp-srl}
+  website = {}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexblancomulero2023qdp(parameter) {
-    var x= document.getElementById('ablancomulero2023qdp');
+function toggleBibtexblanco2023benchmarking(parameter) {
+    var x= document.getElementById('ablanco2023benchmarking');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -435,7 +503,7 @@ function toggleBibtexblancomulero2023qdp(parameter) {
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 30 June 2023
+                    Last updated on 20 October 2023
             </small>
           </p>
 
